Arreglo de proyectos

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -21,7 +21,7 @@
         <h2 class="ph-card-title">ezplace.net</h2>
         <p class="ph-card-subtitle">
           Ezplace es una game network y plataforma web que desarrollé
-           utilizando React para el frontend y Deno para el backend,
+           utilizando HTMX y Rust como modelo de server-side rendering,
             con un fuerte enfoque en demostrar la viabilidad del self-hosting.
           </p>
         <p class="ph-card-description">
@@ -63,7 +63,7 @@
       <div class="project-highlight-card">
         <h2 class="ph-card-title">IMDB Alternative</h2>
         <p class="ph-card-subtitle">
-          En un proyecto colaborativo con Álvaro Hernández, creamos una plataforma 
+          En un proyecto colaborativo, creamos una plataforma 
           alternativa a IMDB, enfocada en ofrecer un sistema de recomendación de 
           películas personalizado.
         </p>
